add styles(colors) to the website's pages

--- a/recipes/curriedCarrotSoup.html
+++ b/recipes/curriedCarrotSoup.html
@@ -4,18 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
+    <style>
+        *{
+            background-color:rgb(177, 214, 192);
+        }
+        h2 {
+            color:crimson;
+            font-weight:1000;
+        }
+        p {
+            font-size:20px;
+            font-weight:bold;
+            color:rgb(206, 69, 69);
+        }
+        h3 {
+            margin-left:45px;
+        }
+        ul{
+            color:rgb(37, 103, 226);
+        }
+        ol {
+            color:rgb(191, 0, 255);
+        }
+    </style>
 </head>
 <body>
-    <h1>Curried Carrot Soup</h1>
-    <img src="../images/12965_Curried-Carrot-Soup_Heather888_4573347_original-4x3-1-31afc791244847e2b7e92ed53c9a3d9a.jpg" alt="Curried Carrot Soup" height="375" width="281.5">
-    <h3>Description</h3>
+    <h1 style="color:orange;-webkit-text-stroke-color: rgb(255, 0, 0);font-family:Impact;">Curried Carrot Soup</h1>
+    <div>
+    <img src="../images/12965_Curried-Carrot-Soup_Heather888_4573347_original-4x3-1-31afc791244847e2b7e92ed53c9a3d9a.jpg" alt="Curried Carrot Soup" height="auto" width="390" class="soup">
+    </div>
+    <h2>Description</h2>
     <p>Carrot soup is a soup prepared with carrot as a primary ingredient.
         It can be prepared as a cream- or broth-style soup. 
         Additional vegetables, root vegetables and various other ingredients can be used in
         its preparation.It may be served hot or cold, and several recipes exist. Carrot soup
         has been described as a "classic" dish in French cuisine.
     </p>
-    <h4>Ingredients</h4>
+    <h3>Ingredients</h3>
     <ul>
         <li>2 tablespoons vegetable oil</li>
 
@@ -29,7 +55,7 @@
 
         <li>cups water, or as needed</li> 
     </ul>
-    <h4>Steps</h4>
+    <h3>Steps</h3>
     <ol>
         <li>Heat oil in a large pot over medium heat. Saute onion until tender and translucent.
             Stir in the curry powder. Add the chopped carrots, and stir until the carrots are
