--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-  <h1>Odin Recipes</h1>
-  <ul>
+  <h1 style="color:red; font-weight:1000;">Odin Recipes</h1>
+  <ul style="padding:200px;">
     <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li>
     <li><a href="recipes/chickenSandwich.html" target="_blank" rel="noopener noreferrer">Buffalo Chicken Sandwich</a></li>
     <li><a href="recipes/curriedCarrotSoup.html" target="_blank" rel="noopener noreferrer">Curried Chicken Soup</a></li>
