--- a/recipes/chickenSandwich.html
+++ b/recipes/chickenSandwich.html
@@ -4,26 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
+    <style> 
+      *{
+        background-color:#FFE1E1;
+      }
+    </style>
 </head>
 <body>
-  <h1>Buffalo Chicken Sandwich</h1>
-  <img src="../images/1113368-slow-cooker-buffalo-chicken-sandwiches-ReneePaj-1x1-1-f1ab4c11111343f7b88ddbfd9df88771.jpg" alt="Delicious buffalo chicken sandwich" width="300" height="300">
-  <h3>Description</h3>
-  <p>A chicken sandwich is a sandwich that typically consists of boneless, skinless chicken
+  <h1 style="color:rgb(217, 150, 57); font-weight:1000;-webkit-text-stroke-color:rgb(127, 74, 0);">Buffalo Chicken Sandwich</h1>
+  <div>
+    <img src="../images/butterChickenSandwich.png" alt="Delicious buffalo chicken sandwich" width="450" height="auto">
+  </div>
+  <h2>Description</h2>
+  <p style="color:rgb(209, 58, 12);font-size:20px;font-weight:600;">A chicken sandwich is a sandwich that typically consists of boneless, skinless chicken
     breast or thigh served between slices of bread,on a bun, or on a roll.Variations on the
-    "chicken sandwich" include the chicken burger, chicken on a bun, chickwich, hot chicken,
+    "chicken sandwich" include the chicken burger, chicken on a bun, chick sandwich, hot chicken,
     or chicken salad sandwich.
   </p>
-  <h4>Ingredients</h4>
-  <ul>
+  <h3>Ingredients</h3>
+  <ul style="color:firebrick;">
     <li>4 skinless, boneless,lifeless chicken breast halves.</li>
     <li>1 (17.5 fluid ounce) bottle Buffalo wing sauce, divided</li>
     <li><em>½</em> (1 ounce) package dry ranch salad dressing mix</li>
     <li>2 tablespoons butter</li>
     <li>6 hoagie rolls, split lengthwise</li>
   </ul>
-  <h4>Steps</h4>
-  <ol>
+  <h3>Steps</h3>
+  <ol style="color:maroon;">
     <li>Place chicken breasts into the slow cooker; pour in 3/4 of the wing sauce and ranch 
         dressing mix.</li>
     <li>Cover and cook on Low for 6 to 7 hours.</li>
