--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+      *{
+        background-color: #FAF1E4;
+      }
+    </style>
 </head>
 <body>
-  <h1>Lasagna</h1>
-  <img src="../images/19344_homemade-lasagna_Rita2-3x2-1-7da94c32febf48dfbcc2d29b06f54e67.jpg" alt="lasagna">    
-  <h3>Description</h3>
+  <h1 class="lasagna">Lasagna</h1>
+  <div><img src="../images/lasagna.jpg" alt="lasagna"></div>    
+  <h2>Description</h2>
   <p><strong><em>Lasagna</em></strong>, also known as lasagne, is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets.
     Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù (ground meats and tomato sauce), béchamel sauce, vegetables, cheeses (which may include ricotta, mozzarella, and parmesan), and seasonings and spices.
     The dish may be topped with grated cheese, which becomes melted during baking.
     Typically cooked pasta is assembled with the other ingredients and then baked in an oven.
     The resulting baked pasta is cut into single-serving square or rectangular portions.</p>
-    <h4>Ingredients</h4>
-    <ul>
+    <h3 style="font-family: monospace;margin-left:30px;">Ingredients</h3>
+    <ul class="not-aligned">
       <li>Meat</li>
       <li>Onion <em>and</em> Garlic</li>
       <li>Tomato Products</li>
@@ -25,8 +31,8 @@
       <li>Cheeses</li>
       <li>Egg</li>
     </ul>
-    <h4>Steps</h4>
-    <ol>
+    <h3 style="font-weight:900;margin-left:20px">Steps</h3>
+    <ol style="padding:0px;color:rgb(111, 92, 65)">
       <li>Make the meat sauce.</li>
       <li>Cook the noodles.</li>
       <li>Make the ricotta mixture.</li>
