--- a/recipes/chickenSandwich.html
+++ b/recipes/chickenSandwich.html
@@ -17,7 +17,7 @@
     <img src="../images/butterChickenSandwich.png" alt="Delicious buffalo chicken sandwich" width="450" height="auto">
   </div>
   <h2>Description</h2>
-  <p style="color:rgb(209, 58, 12);font-size:20px;font-weight:600;">A chicken sandwich is a sandwich that typically consists of boneless, skinless chicken
+  <p style="color:rgb(209, 58, 12);font-size:20px">A chicken sandwich is a sandwich that typically consists of boneless, skinless chicken
     breast or thigh served between slices of bread,on a bun, or on a roll.Variations on the
     "chicken sandwich" include the chicken burger, chicken on a bun, chick sandwich, hot chicken,
     or chicken salad sandwich.
