fix formatting for mobile devices
px based properties are replaced by device-netural properties,
such as top and left.
eg. 20px are 1/10 of the screen
on a laptop but 1/3 on a phone screen.

--- a/recipes/chickenSandwich.html
+++ b/recipes/chickenSandwich.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-  <h1 style="color:rgb(217, 150, 57); font-weight:1000;-webkit-text-stroke-color:rgb(127, 74, 0);">Buffalo Chicken Sandwich</h1>
+  <h1 style="color:rgb(217, 150, 57); font-weight:1000;-webkit-text-stroke-color:rgb(127, 74, 0);" class="header-non-index">Buffalo Chicken Sandwich</h1>
   <div>
     <img src="../images/butterChickenSandwich.png" alt="Delicious buffalo chicken sandwich" width="450" height="auto">
   </div>
