--- a/recipes/curriedCarrotSoup.html
+++ b/recipes/curriedCarrotSoup.html
@@ -17,9 +17,6 @@
             font-size:20px;
             color:rgb(206, 69, 69);
         }
-        h3 {
-            margin-left:45px;
-        }
         ul{
             color:rgb(37, 103, 226);
         }
@@ -29,7 +26,7 @@
     </style>
 </head>
 <body>
-    <h1 style="color:orange;-webkit-text-stroke-color: rgb(255, 0, 0);font-family:Impact;">Curried Carrot Soup</h1>
+    <h1 style="color:orange;-webkit-text-stroke-color: rgb(255, 0, 0);font-family:Impact;" class="header-non-index">Curried Carrot Soup</h1>
     <div>
     <img src="../images/12965_Curried-Carrot-Soup_Heather888_4573347_original-4x3-1-31afc791244847e2b7e92ed53c9a3d9a.jpg" alt="Curried Carrot Soup" height="auto" width="390" class="soup">
     </div>
