--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <h1 style="color:red; font-weight:1000;">Odin Recipes</h1>
-  <ul style="padding:200px;">
-    <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li>
-    <li><a href="recipes/chickenSandwich.html" target="_blank" rel="noopener noreferrer">Buffalo Chicken Sandwich</a></li>
-    <li><a href="recipes/curriedCarrotSoup.html" target="_blank" rel="noopener noreferrer">Curried Chicken Soup</a></li>
-  </ul>
+  <div>
+    <ul>
+      <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li>
+      <li><a href="recipes/chickenSandwich.html" target="_blank" rel="noopener noreferrer">Buffalo Chicken Sandwich</a></li>
+      <li><a href="recipes/curriedCarrotSoup.html" target="_blank" rel="noopener noreferrer">Curried Chicken Soup</a></li>
+    </ul>
+  </div>
 </body>
 </html>
