--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-  <h1 class="lasagna">Lasagna</h1>
+  <h1 class="header-non-index lasagna">Lasagna</h1>
   <div><img src="../images/lasagna.jpg" alt="lasagna"></div>    
   <h2>Description</h2>
   <p><strong><em>Lasagna</em></strong>, also known as lasagne, is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets.
@@ -20,7 +20,7 @@
     The dish may be topped with grated cheese, which becomes melted during baking.
     Typically cooked pasta is assembled with the other ingredients and then baked in an oven.
     The resulting baked pasta is cut into single-serving square or rectangular portions.</p>
-    <h3 style="font-family: monospace;margin-left:30px;">Ingredients</h3>
+    <h3 style="font-family: monospace;">Ingredients</h3>
     <ul class="not-aligned">
       <li>Meat</li>
       <li>Onion <em>and</em> Garlic</li>
@@ -31,7 +31,7 @@
       <li>Cheeses</li>
       <li>Egg</li>
     </ul>
-    <h3 style="font-weight:900;margin-left:20px">Steps</h3>
+    <h3 style="font-weight:900;">Steps</h3>
     <ol style="padding:0px;color:rgb(111, 92, 65)">
       <li>Make the meat sauce.</li>
       <li>Cook the noodles.</li>
