fix formatting for mobile devices

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-  <h1 style="color:red; font-weight:1000;">Odin Recipes</h1>
-  <div>
+  <h1 style="color:red; font-weight:1000;" class="odin-recipes">Odin Recipes</h1>
+  <div class="home-page-ul">
     <ul>
       <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li>
       <li><a href="recipes/chickenSandwich.html" target="_blank" rel="noopener noreferrer">Buffalo Chicken Sandwich</a></li>
