apply layout for homepage using grid & change heading colour scheme

--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-  <h1 style="color:red; font-weight:1000;" class="odin-recipes">Odin Recipes</h1>
-  <div class="home-page-ul">
-    <ul>
+  <h1 style="font-weight:1000;" class="odin-recipes">Odin Recipes</h1>
+    <ul class="grid">
       <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li>
       <li><a href="recipes/chickenSandwich.html" target="_blank" rel="noopener noreferrer">Buffalo Chicken Sandwich</a></li>
       <li><a href="recipes/curriedCarrotSoup.html" target="_blank" rel="noopener noreferrer">Curried Chicken Soup</a></li>
     </ul>
-  </div>
 </body>
 </html>
