fix the size of the heading color highlight

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-  <h1 style="font-weight:1000;" class="odin-recipes">Odin Recipes</h1>
+  <h1 style="font-weight:1000;" class="odin-recipes";><span>Odin Recipes</span></h1>
     <ul class="grid">
       <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li>
       <li><a href="recipes/chickenSandwich.html" target="_blank" rel="noopener noreferrer">Buffalo Chicken Sandwich</a></li>
