--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin-recipes</title>
 </head>
 <body>
   <h1 style="font-weight:1000;" class="odin-recipes";><span>Odin Recipes</span></h1>
