--- a/recipes/chickenSandwich.html
+++ b/recipes/chickenSandwich.html
@@ -14,7 +14,7 @@
 <body>
   <h1 style="color:rgb(217, 150, 57); font-weight:1000;-webkit-text-stroke-color:rgb(127, 74, 0);" class="header-non-index">Buffalo Chicken Sandwich</h1>
   <div>
-    <img src="../images/butterChickenSandwich.png" alt="Delicious buffalo chicken sandwich" width="450" height="auto">
+    <img src="../images/butterChickenSandwich (1).png" alt="Delicious buffalo chicken sandwich" width="450" height="auto">
   </div>
   <h2>Description</h2>
   <p style="color:rgb(209, 58, 12);font-size:20px">A chicken sandwich is a sandwich that typically consists of boneless, skinless chicken
