change layout and styling of lasagna and burger pages

--- a/recipes/chickenSandwich.html
+++ b/recipes/chickenSandwich.html
@@ -7,36 +7,45 @@
     <link rel="stylesheet" href="../style.css">
     <style> 
       *{
-        background-color:#FFE1E1;
+        background-color:hsl(0, 100%, 94%);
+      }
+      body {
+        display:flex;
       }
     </style>
 </head>
 <body>
-  <h1 style="color:rgb(217, 150, 57); font-weight:1000;-webkit-text-stroke-color:rgb(127, 74, 0);" class="header-non-index">Buffalo Chicken Sandwich</h1>
-  <div>
-    <img src="../images/butterChickenSandwichCropped.png" alt="Delicious buffalo chicken sandwich" width="450" height="auto">
+  <div style="padding:200px 0; background-color:hsl(0, 100%, 65%) ;">
+    <h1 style="color:rgb(255, 255, 0); font-weight:1000;-webkit-text-stroke-color:rgb(127, 74, 0);background-color: inherit;">Buffalo Chicken Sandwich</h1>
+    <img src="../images/butterChickenSandwichCropped.png" alt="Delicious buffalo chicken sandwich" width="450" height="auto" style="background-color: inherit;"> 
   </div>
-  <h2>Description</h2>
-  <p style="color:rgb(209, 58, 12);font-size:20px">A chicken sandwich is a sandwich that typically consists of boneless, skinless chicken
-    breast or thigh served between slices of bread,on a bun, or on a roll.Variations on the
-    "chicken sandwich" include the chicken burger, chicken on a bun, chick sandwich, hot chicken,
-    or chicken salad sandwich.
-  </p>
-  <h3>Ingredients</h3>
-  <ul style="color:firebrick;">
-    <li>4 skinless, boneless,lifeless chicken breast halves.</li>
-    <li>1 (17.5 fluid ounce) bottle Buffalo wing sauce, divided</li>
-    <li><em>½</em> (1 ounce) package dry ranch salad dressing mix</li>
-    <li>2 tablespoons butter</li>
-    <li>6 hoagie rolls, split lengthwise</li>
-  </ul>
+  <div style="padding-top:450px;margin-right:70px;">
+    <h3>Ingredients</h3>
+    <ul style="color:firebrick;">
+      <li>4 skinless, boneless,lifeless chicken breast halves.</li>
+      <li>1 (17.5 fluid ounce) bottle Buffalo wing sauce, divided</li>
+      <li><em>½</em> (1 ounce) package dry ranch salad dressing mix</li>
+      <li>2 tablespoons butter</li>
+      <li>6 hoagie rolls, split lengthwise</li>
+    </ul>
+  </div>
+  <div style="width:600px;padding-top:50px;">
+    <h2>Description</h2>
+    <p style="color:rgb(209, 58, 12);font-size:20px">A chicken sandwich is a sandwich that typically
+      consists of boneless, skinless, chicken breast or thigh served between slices of bread,on a
+      bun, or on a roll.Variations on the "chicken sandwich" include the chicken burger, chicken
+      on a bun, chick sandwich, hot chicken, or chicken salad sandwich.
+    </p>
+  </div>
+  <div style="padding-top:450px;padding-right:10px;width:690px;">
   <h3>Steps</h3>
-  <ol style="color:maroon;">
-    <li>Place chicken breasts into the slow cooker; pour in 3/4 of the wing sauce and ranch 
-        dressing mix.</li>
-    <li>Cover and cook on Low for 6 to 7 hours.</li>
-    <li>Shred chicken in the cooker with two forks. Stir in butter.</li>
-    <li>Pile shredded chicken and sauce onto hoagie rolls. Serve with remaining Buffalo sauce.</li>
-  </ol>
+    <ol style="color:maroon;">
+      <li>Place chicken breasts into the slow cooker; pour in 3/4 of the wing sauce and ranch 
+          dressing mix.</li>
+      <li>Cover and cook on Low for 6 to 7 hours.</li>
+      <li>Shred chicken in the cooker with two forks. Stir in butter.</li>
+      <li>Pile shredded chicken and sauce onto hoagie rolls. Serve with remaining Buffalo sauce.</li>
+    </ol>
+  </div>
 </body>
 </html>
