change padding for a chikcenSandwich page-element

--- a/recipes/chickenSandwich.html
+++ b/recipes/chickenSandwich.html
@@ -15,12 +15,12 @@
     </style>
 </head>
 <body>
-  <div style="padding:200px 0; background-color:hsl(0, 100%, 65%) ;">
+  <div style="padding:180px 0; background-color:hsl(0, 100%, 65%) ;">
     <h1 style="color:rgb(255, 255, 0); font-weight:1000;-webkit-text-stroke-color:rgb(127, 74, 0);background-color: inherit;">Buffalo Chicken Sandwich</h1>
     <img src="../images/butterChickenSandwichCropped.png" alt="Delicious buffalo chicken sandwich" width="450" height="auto" style="background-color: inherit;"> 
   </div>
   <div style="padding-top:450px;margin-right:70px;">
-    <h3>Ingredients</h3>
+    <h3 style="padding-left:40px;">Ingredients</h3>
     <ul style="color:firebrick;">
       <li>4 skinless, boneless,lifeless chicken breast halves.</li>
       <li>1 (17.5 fluid ounce) bottle Buffalo wing sauce, divided</li>
@@ -38,7 +38,7 @@
     </p>
   </div>
   <div style="padding-top:450px;padding-right:10px;width:690px;">
-  <h3>Steps</h3>
+  <h3 style="padding-left:40px;">Steps</h3>
     <ol style="color:maroon;">
       <li>Place chicken breasts into the slow cooker; pour in 3/4 of the wing sauce and ranch 
           dressing mix.</li>
