--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -15,7 +15,7 @@
       }
       p {
         font-size:20px;
-        margin:5px;
+        margin:0 10px;
       }
       li {
         padding-left:20px;
@@ -31,7 +31,7 @@
     The dish may be topped with grated cheese, which becomes melted during baking.
     Typically cooked pasta is assembled with the other ingredients and then baked in an oven.
     The resulting baked pasta is cut into single-serving square or rectangular portions.</p>
-  <div style="display:inline-block;margin-left:290px;margin-bottom: 10px; margin-top:10px;">  
+  <div style="display:inline-block;margin-left:170px; margin-top:10px;">  
     <h3 style="font-family: monospace;">Ingredients</h3>
     <ul class="not-aligned" style="display:flex;">
       <li>Meat</li>
@@ -44,7 +44,7 @@
       <li>Egg</li>
     </ul>
   </div>
-  <div style="display:inline-block; margin-left:118px;">
+  <div style="display:inline-block; ">
     <h3 style="font-weight:900;">Steps</h3>
     <ol style="color:rgb(111, 92, 65);display:flex;">
       <li>Make the meat sauce</li>
