--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../images/lasagnaMasked.png"
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
     <style>
       *{
