add new layout and style to chicken-soup page

--- a/recipes/chickenSandwich.html
+++ b/recipes/chickenSandwich.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Chicken Sandwich</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../images/butterChickenSandwichCropped.png">
     <style> 
       *{
         background-color:hsl(0, 100%, 94%);
@@ -37,9 +38,9 @@
       on a bun, chick sandwich, hot chicken, or chicken salad sandwich.
     </p>
   </div>
-  <div style="padding-top:450px;padding-right:10px;width:690px;">
+  <div style="padding-top:450px;padding-right:15px;width:690px;">
   <h3 style="padding-left:40px;">Steps</h3>
-    <ol style="color:maroon;">
+    <ol style="color:maroon;list-style-type: decimal;">
       <li>Place chicken breasts into the slow cooker; pour in 3/4 of the wing sauce and ranch 
           dressing mix.</li>
       <li>Cover and cook on Low for 6 to 7 hours.</li>
