--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -46,7 +46,7 @@
   </div>
   <div style="display:inline-block; ">
     <h3 style="font-weight:900;">Steps</h3>
-    <ol style="color:rgb(111, 92, 65);display:flex;">
+    <ol style="color:rgb(111, 92, 65);display:flex;list-style-type: decimal;">
       <li>Make the meat sauce</li>
       <li>Cook the noodles</li>
       <li>Make the ricotta mixture</li>
